      The 4 visual styles from Amarok 1 (normal, angry, frozen and happy) are 
      all supported.
    * Cover images can now be fetched via HTTP. (BR 176899)
    * Custom Labels has returned.  Assign labels from the tag dialog, and
      see them in the tag dialog or in the playlist.
    * Fetch labels from last.fm for some tracks [UPDATE THIS ONCE WE FIGURE OUT WHEN TO DO SO]

  CHANGES:
    * Moved the "Playlist Layout" button into the main menu, as the playlist
      toolbar was becoming too crowded.
    * New interface for repeat and random playback modes. Interface now correctly
      represents the actual behaviour (ony one mode can be active at any time)
      and is accessible directly from the playlist toolbar.
    * Usability: Added tooltips all over the place, improved existing ones.
    * Usability improvements for the Ampache service settings dialog.
    * Length and size of queued tracks are now shown in the statusbar tooltip. (BR 144471)
    * Improved Cover fetching. Changed Dialog so the user can select from
      possible covers.
    * Improved guessing tags from filename. Added preview to Dialog.

  BUGFIXES:
    * Fixed magnatune membership type not remembered when running a non
      english Amarok. (BR 195427)
    * Support for "title:" token in the collection search. Patch by Roberto
      Bertolusso <rbertolusso@yahoo.com>. (BR 211249)
    * Fixed lots of memory leaks reported by Valgrind.
    * Made lyrics applet colours presentable with bright and dark colour
      styles. (BR 214930)
    * Made sure random mode works if repeat is on. (BR 214559)
    * Fixed random mode behaviour when "going back". (BR 208892)
    * Made random mode work. (BR 212910)


VERSION 2.2.1
  FEATURES:
    * Podcasts will only be automatically updated when there is a network
      connection (using Solid).
    * The SMB (Samba) protocol is now supported in the playlist. Patch by 
      Steven van der Vegt <s.vandervegt@student.utwente.nl>. (BR 178691)