@@ -15,6 +15,7 @@ VERSION 2.2.2
     * Fetch labels from last.fm for some tracks [UPDATE THIS ONCE WE FIGURE OUT WHEN TO DO SO]
 
   CHANGES:
+    * Magnatune.com store: Better status message when downloading albums.
     * Moved the "Playlist Layout" button into the main menu, as the playlist
       toolbar was becoming too crowded.
     * New interface for repeat and random playback modes. Interface now correctly
@@ -28,8 +29,8 @@ VERSION 2.2.2
     * Improved guessing tags from filename. Added preview to Dialog.
 
   BUGFIXES:
-    * Fixed magnatune membership type not remembered when running a non
-      english Amarok. (BR 195427)
+    * Magnatune.com store: Fixed membership type not remembered when running 
+      a non english Amarok. (BR 195427)
     * Support for "title:" token in the collection search. Patch by Roberto
       Bertolusso <rbertolusso@yahoo.com>. (BR 211249)
     * Fixed lots of memory leaks reported by Valgrind.
